--- a/requirements.txt.txt
+++ b/requirements.txt.txt
@@ -1,1 +1,7 @@
 Flask=1.1.2
+Python
+NLTK
+NumPy
+textblob
+
+pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
